Did some changes based on updated specification.

--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -1,11 +1,13 @@
 {% extends "post-types/page.html.twig" %}
 
 {% block article_content %}
-    <div class="row my-5">
-        <div class="col-12">
-            {{ post.content|default(content|default) }}
+    {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
+        <div class="row my-5">
+            <div class="col-12">
+                {{ post.content|default(content|default) }}
+            </div>
         </div>
-    </div>
+    {% endif %}
 
     <div class="row my-5">
         {{ dump(subtypes) }}
@@ -13,12 +15,12 @@
         {% for oneSubType in subtypes %}
             <!-- ONE SUBTYPE -->
             {% if subtype == oneSubType.slug %}
-                <a class="d-block col bg-light text-primary border border-1 border-dark" href="?oblast={{ oneSubType.slug }}">
-                    {{ oneSubType.name }}
+                <a class="d-block col p-3 text-center align-middle bg-light text-primary border border-1 border-dark" href="?oblast={{ oneSubType.slug }}">
+                    <strong>{{ oneSubType.name }}</strong>
                 </a>
             {% else %}
-                <a class="d-block col bg-primary text-light border border-1 border-dark" href="?oblast={{ oneSubType.slug }}">
-                    {{ oneSubType }}
+                <a class="d-block col p-3 text-center align-middle bg-primary text-light border border-1 border-dark" href="?oblast={{ oneSubType.slug }}">
+                    <strong>{{ oneSubType.name }}</strong>
                 </a>
             {% endif %}
         {% endfor %}
