Did some changes based on updated specification.

--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -38,7 +38,7 @@
                     {% endif %}
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">
-                            {{ post.title }}
+                            {{ material.title }}
                         </h5>
                     </div>
                 </a>
