--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -15,11 +15,13 @@
         {% for oneSubType in subtypes %}
             <!-- ONE SUBTYPE -->
             {% if subtype == oneSubType.slug %}
-                <a class="d-block col p-3 text-center align-middle bg-light text-secondary border border-1 border-dark" href="?oblast={{ oneSubType.slug }}">
+                <a class="d-block col m-3 p-2 text-center align-middle bg-light text-secondary border border-bottom-0 border-3 border-dark rounded-top rounded-pill"
+                   href="?oblast={{ oneSubType.slug }}">
                     <strong>{{ oneSubType.name }}</strong>
                 </a>
             {% else %}
-                <a class="d-block col p-3 text-center align-middle bg-secondary text-light border border-1 border-dark" href="?oblast={{ oneSubType.slug }}">
+                <a class="d-block col m-3 p-2 text-center align-middle bg-secondary text-light border border-bottom-0 border-3 border-dark rounded-top rounded-pill"
+                   href="?oblast={{ oneSubType.slug }}">
                     <strong>{{ oneSubType.name }}</strong>
                 </a>
             {% endif %}
