--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -20,7 +20,7 @@
                     <strong>{{ oneSubType.name }}</strong>
                 </a>
             {% else %}
-                <a class="d-block col m-2 p-2 text-center align-middle bg-secondary text-light border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill"
+                <a class="d-block col m-2 p-2 text-center align-middle bg-secondary text-body border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill"
                    href="?oblast={{ oneSubType.slug }}">
                     <strong>{{ oneSubType.name }}</strong>
                 </a>
