--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -9,18 +9,18 @@
         </div>
     {% endif %}
 
-    <div class="row my-5">
+    <div class="row mt-5 mb-0">
         {{ dump(subtypes) }}
         {{ dump(subtype) }}
         {% for oneSubType in subtypes %}
             <!-- ONE SUBTYPE -->
             {% if subtype == oneSubType.slug %}
-                <a class="d-block col m-2 p-2 text-center align-middle bg-white text-secondary border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill"
+                <a class="d-block col m-0 p-3 text-center align-middle bg-white text-secondary border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill"
                    href="?oblast={{ oneSubType.slug }}">
                     <strong>{{ oneSubType.name }}</strong>
                 </a>
             {% else %}
-                <a class="d-block col m-2 p-2 text-center align-middle bg-secondary text-white border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill"
+                <a class="d-block col m-0 p-3 text-center align-middle bg-secondary text-white border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill"
                    href="?oblast={{ oneSubType.slug }}">
                     {{ oneSubType.name }}
                 </a>
@@ -28,18 +28,18 @@
         {% endfor %}
     </div>
 
-    <div class="row my-5">
+    <div class="row mt-0 mb-5">
         {% for material in materials %}
             <article class="col-12 col-sm-6 col-md-4 col-lg-3">
                 {% set image_src = material.thumbnail.src|default(get_image(material.meta('_menu_image')).src|default) %}
                 <a class="card border-0 h-100 text-dark text-decoration-none" href="{{ image_src }}">
                     {% if image_src|default and image_src|length > 0 %}
-                        <div class="ratio ratio-16x9 card-img-top mx-auto mt-4">
+                        <div class="card-img-top mx-auto mt-4">
                             <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}" alt="{{ material.thumbnail.alt }}">
                         </div>
                     {% endif %}
                     <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">
+                        <h5 class="card-title text-center">
                             {{ material.title }}
                         </h5>
                     </div>
