--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -1,8 +1,8 @@
 {% set imageSrc = image.src|default(site.theme.link ~ '/images/photos/foto.png') %}
 
 <header class="row page-banner bg-primary text-white mb-3 border border-primary border-2">
-    <div class="col-12 col-lg-6 image-box" style="background-image: url({{ imageSrc }});">
-        <!-- {{ site.name }} - post.title -->
+    <div class="col-12 col-lg-6 image-box"> <!--style="background-image: url({{ imageSrc }});"-->
+        <img alt="CHEMIE ŽIJE!" class="img-fluid" src="{{ imageSrc }}">
     </div>
     <div class="col-12 col-lg-6 title-box d-flex flex-column justify-content-center text-center">
         <h1 class="p-5 text-capitalize {{ isHome ? ' single-heading ' : ' pb-2 ' }}">
