--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -10,18 +10,17 @@
     {% endif %}
 
     <div class="row mt-5 mb-0">
-        {{ dump(subtypes) }}
-        {{ dump(subtype) }}
         {% for oneSubType in subtypes %}
             <!-- ONE SUBTYPE -->
+            {% set classes_common = "d-flex col m-0 px-4 py-2 text-center align-middle align-items-center justify-content-center" %}
+            {% set classes_border = "border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill" %}
+            {% set classes = classes_common ~ " " ~ classes_border %}
             {% if subtype == oneSubType.slug %}
-                <a class="d-block col m-0 p-3 text-center align-middle bg-white text-secondary border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill"
-                   href="?oblast={{ oneSubType.slug }}">
+                <a class="{{ classes }} bg-white text-secondary" href="?oblast={{ oneSubType.slug }}">
                     <strong>{{ oneSubType.name }}</strong>
                 </a>
             {% else %}
-                <a class="d-block col m-0 p-3 text-center align-middle bg-secondary text-white border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill"
-                   href="?oblast={{ oneSubType.slug }}">
+                <a class="{{ classes }} bg-secondary text-white" href="?oblast={{ oneSubType.slug }}">
                     {{ oneSubType.name }}
                 </a>
             {% endif %}
