--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -9,10 +9,10 @@
         </div>
     {% endif %}
 
-    <div class="row mt-5 mb-0">
+    <div class="row mt-3 mb-0">
         {% for oneSubType in subtypes %}
             <!-- ONE SUBTYPE -->
-            {% set classes_common = "d-flex col m-0 px-4 py-2 text-center align-middle align-items-center justify-content-center" %}
+            {% set classes_common = "d-flex col m-0 mt-3 px-4 py-2 text-center align-middle align-items-center justify-content-center" %}
             {% set classes_border = "border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill" %}
             {% set classes = classes_common ~ " " ~ classes_border %}
             {% if subtype == oneSubType.slug %}
