Some changes based on new requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -19,8 +19,8 @@ $rfs-base-value: 0.8rem;
     }
   }
 
-  .image-box {
-    max-height: 25vh !important;
+  .image-box img {
+    max-height: 30vh !important;
   }
 }
 
