Some changes based on new requirements.

--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -46,10 +46,8 @@
             </article>
         {% endfor %}
         {% if materials|length < 1 %}
-            <article class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <p>
-                    V této kategorii bohužel ještě nejsou žádné fotografie.
-                </p>
+            <article class="col-12">
+                <p><strong>V této kategorii bohužel ještě nejsou žádné fotografie.</strong></p>
             </article>
         {% endif %}
     </div>
