--- a/views/post-parts/layout/signpost-item.html.twig
+++ b/views/post-parts/layout/signpost-item.html.twig
@@ -1,7 +1,7 @@
 <article class="col-12 col-md-6 col-lg-4">
     <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ post.path }}">
         {% if post.meta('_menu_image')|default %}
-            <div class="card-img-top mx-auto mt-4">
+            <div class="w-100 card-img-top mx-auto mt-4">
                 <img src="{{ get_image(post.meta('_menu_image')).src }}" alt="{{ post.title }}"/>
             </div>
         {% endif %}
