Some changes based on new requirements.

--- a/views/post-parts/layout/signpost-item.html.twig
+++ b/views/post-parts/layout/signpost-item.html.twig
@@ -2,7 +2,7 @@
     <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ post.path }}">
         {% if post.meta('_menu_image')|default %}
             <div class="w-100 card-img-top mx-auto mt-4">
-                <img src="{{ get_image(post.meta('_menu_image')).src }}" alt="{{ post.title }}"/>
+                <img src="{{ get_image(post.meta('_menu_image')).src }}" alt="{{ post.title }}" class="mw-100"/>
             </div>
         {% endif %}
         {% set classes = post.meta('_menu_image')|default ? 'justify-content-start': 'justify-content-center align-items-center pt-5' %}
