--- a/views/post-parts/layout/signpost-item.html.twig
+++ b/views/post-parts/layout/signpost-item.html.twig
@@ -7,7 +7,7 @@
         {% endif %}
         {% set classes = post.meta('_menu_image')|default ? 'justify-content-center': 'justify-content-center align-items-center pt-5' %}
         <div class="card-body d-flex flex-column {{ classes }}">
-            <h5 class="card-title {{ post.post_excerpt|default|length > 0 ? 'my-auto' : 'text-center' }}">
+            <h5 class="card-title {{ post.post_excerpt|default|length > 0 ? 'mt-auto' : 'text-center' }}">
                 {{ post.title }}
             </h5>
             <p class="small card-text {{ post.post_excerpt|default|length > 0 ? '' : '' }}" style="text-align: justify;">
