--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -1,10 +1,10 @@
 {% set imageSrc = image.src|default(site.theme.link ~ '/images/photos/foto.png') %}
 
 <header class="row page-banner bg-primary text-white mb-3 border border-primary border-2">
-    <div class="col-12 col-lg-6 col-xl-5 image-box m-0 p-0" style="{{ isHome ? 'min-height: 6em;' : '' }}">
+    <div class="col-12 col-lg-6 {{ isHome ? '' : 'col-xl-5' }} image-box m-0 p-0">
         <img alt="CHEMIE ŽIJE!" class="img-fluid" src="{{ imageSrc }}">
     </div>
-    <div class="col-12 col-lg-6 col-xl-7 title-box d-flex flex-column justify-content-center text-center">
+    <div class="col-12 col-lg-6 {{ isHome ? '' : 'col-xl-7' }} title-box d-flex flex-column justify-content-center text-center">
         <h1 class="p-5 text-capitalize {{ isHome ? ' single-heading ' : ' pb-2 ' }}">
             {{ site.name }}
         </h1>
