--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -1,7 +1,7 @@
 {% set imageSrc = image.src|default(site.theme.link ~ '/images/photos/foto.png') %}
 
 <header class="row page-banner bg-primary text-white mb-3 border border-primary border-2">
-    <div class="col-12 col-lg-6 {{ isHome ? '' : 'col-xl-5' }} image-box m-0 p-0">
+    <div class="d-flex col-12 col-lg-6 {{ isHome ? '' : 'col-xl-5' }} image-box m-0 p-0">
         <img alt="CHEMIE ŽIJE!" class="img-fluid m-auto" src="{{ imageSrc }}">
     </div>
     <div class="col-12 col-lg-6 {{ isHome ? '' : 'col-xl-7' }} title-box d-flex flex-column justify-content-center text-center">
