--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -3,8 +3,6 @@
 {# Page with list of teaching materials. #}
 
 {% block article_content %}
-    {{ dump() }}
-    <!-- Oblast: {{ subtype|default('neuvedena') }} -->
     {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
         <section class="row my-3">
             <div class="col-12">
@@ -14,7 +12,7 @@
     {% endif %}
 
     {% if subtypes|length > 1 %}
-        <div class="row mt-3 mb-0">
+        <div class="row mt-3 mb-0" style="line-height: 1.1;">
             {% for oneSubType in subtypes %}
                 <!-- ONE SUBTYPE -->
                 {% set classes_common = "d-flex col my-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
