Some changes based on new requirements.

--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -58,6 +58,13 @@
             </div>
         </section>
     {% endfor %}
+    {% if materials|length < 1 %}
+        <section class="row my-5">
+            <div class="col-12">
+                <p><strong>V této kategorii bohužel zatím nejsou žádné materiály.</strong></p>
+            </div>
+        </section>
+    {% endif %}
 {% endblock article_content %}
 
 {% block article_signpost %}
