Some changes based on new requirements.

--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -46,7 +46,7 @@
             </article>
         {% endfor %}
         {% if materials|length < 1 %}
-            <article class="col-12">
+            <article class="col-12 my-5">
                 <p><strong>V této kategorii bohužel ještě nejsou žádné fotografie.</strong></p>
             </article>
         {% endif %}
