--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -20,7 +20,7 @@
                     <strong>{{ oneSubType.name }}</strong>
                 </a>
             {% else %}
-                <a class="{{ classes }} bg-primary text-white" href="?oblast={{ oneSubType.slug }}">
+                <a class="{{ classes }} bg-primary text-white" href="?oblast={{ oneSubType.slug }}" style="border-top-left-radius: 2em; border-top-right-radius: 2em;">
                     {{ oneSubType.name }}
                 </a>
             {% endif %}
