Some changes based on new requirements.

--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -9,7 +9,7 @@
         </div>
     {% endif %}
 
-    <div class="row mx-3 mt-3 mb-0" style="line-height: 1.1;">
+    <div class="row px-3 mt-3 mb-0" style="line-height: 1.1;">
         {% for oneSubType in subtypes %}
             <!-- ONE SUBTYPE -->
             {% set classes_common = "d-flex col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
