--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -12,18 +12,20 @@
     {% endif %}
 
     {% if subtypes|length > 1 %}
-        <div class="row mt-3 mb-0" style="line-height: 1.1;">
+        <div class="row px-3 mt-0 mb-0" style="line-height: 1.1;">
             {% for oneSubType in subtypes %}
                 <!-- ONE SUBTYPE -->
-                {% set classes_common = "d-flex col my-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
-                {% set classes_border = "border border-bottom-0 border-3 border-dark rounded-bottom rounded-pill" %}
+                {% set classes_common = "d-flex col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
+                {% set classes_border = "border border-3 border-primary" %}
                 {% set classes = classes_common ~ " " ~ classes_border %}
                 {% if subtype == oneSubType.slug %}
-                    <a class="{{ classes }} bg-white text-secondary" href="?oblast={{ oneSubType.slug }}">
+                    <a class="{{ classes }} bg-white text-primary" href="?oblast={{ oneSubType.slug }}"
+                       style="border-top-left-radius: 1.25em !important; border-top-right-radius: 1.25em !important;">
                         <strong>{{ oneSubType.name }}</strong>
                     </a>
                 {% else %}
-                    <a class="{{ classes }} bg-secondary text-white" href="?oblast={{ oneSubType.slug }}">
+                    <a class="{{ classes }} bg-primary text-white" href="?oblast={{ oneSubType.slug }}"
+                       style="border-top-left-radius: 1.25em !important; border-top-right-radius: 1.25em !important;">
                         {{ oneSubType.name }}
                     </a>
                 {% endif %}
