--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -16,11 +16,13 @@
             {% set classes_border = "border border-3 border-primary" %}
             {% set classes = classes_common ~ " " ~ classes_border %}
             {% if subtype == oneSubType.slug %}
-                <a class="{{ classes }} bg-white text-primary" href="?oblast={{ oneSubType.slug }}" style="border-top-left-radius: 1.25em !important; border-top-right-radius: 1.25em !important;">
+                <a class="{{ classes }} bg-white text-primary" href="?oblast={{ oneSubType.slug }}"
+                   style="border-top-left-radius: 1.25em !important; border-top-right-radius: 1.25em !important;">
                     <strong>{{ oneSubType.name }}</strong>
                 </a>
             {% else %}
-                <a class="{{ classes }} bg-primary text-white" href="?oblast={{ oneSubType.slug }}" style="border-top-left-radius: 1.25em !important; border-top-right-radius: 1.25em !important;">
+                <a class="{{ classes }} bg-primary text-white" href="?oblast={{ oneSubType.slug }}"
+                   style="border-top-left-radius: 1.25em !important; border-top-right-radius: 1.25em !important;">
                     {{ oneSubType.name }}
                 </a>
             {% endif %}
