--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -29,7 +29,7 @@
         {% endfor %}
     </div>
 
-    <div class="row mt-0 mb-5">
+    <div class="row mt-0 mb-5 px-2">
         {% for material in materials %}
             <article class="col-12 col-sm-6 col-md-4 col-lg-3">
                 {% set image_src = material.thumbnail.src|default(get_image(material.meta('_menu_image')).src|default) %}
