--- a/views/post-parts/periodical-table/interactive-periodical-table.html.twig
+++ b/views/post-parts/periodical-table/interactive-periodical-table.html.twig
@@ -25,18 +25,18 @@
             {% set row = 11 %}
         {% endif %}
         {% if row and col %}
-            <div style="grid-column: {{ col }}; grid-row: {{ row }}; background-color: lightgreen; border: 1px solid red;">
+            <div class="element" style="grid-column: {{ col }}; grid-row: {{ row }};">
                 {{ element.atomic_number }}<br>
                 <strong>{{ element.symbol }}</strong>
             </div>
         {% endif %}
     {% endfor %}
 
-    <div style="grid-column: 1; grid-row: 1;"></div>
-    <div style="grid-column: 3; grid-row: 2;"></div>
-    <div style="grid-column: 4 / 13; grid-row: 2 / 4;"></div>
-    <div style="grid-column: 14 / 18; grid-row: 2;"></div>
-    <div style="grid-column: 1 / 19; grid-row: 9; background-color: lightgrey;"></div>
-    <div style="grid-column: 1 / 5; grid-row: 10 / 11;"></div>
+    <div style="grid-column: 1 / 2; grid-row: 1 / 2;"></div>
+    <div style="grid-column: 3 / 4; grid-row: 2 / 3;"></div>
+    <div style="grid-column: 4 / 14; grid-row: 2 / 5;"></div>
+    <div style="grid-column: 14 / 19; grid-row: 2 / 3;"></div>
+    <div style="grid-column: 1 / 20; grid-row: 9 / 10; background-color: lightgrey;"></div>
+    <div style="grid-column: 1 / 5; grid-row: 10 / 12;"></div>
 
 </div>
