--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -14,28 +14,15 @@
   .element {
     border-color: blue;
     background-color: lightblue;
-    border-left: 5px solid;
-    position: relative;
-    border-radius: 10px;
-    background-image: linear-gradient(135deg, transparent 5%, #333 5% 95%, transparent 95%);
-    padding: 20px;
-    z-index: 0;
-
-    .elem::before {
-      z-index: -1;
-      content: '';
-      position: absolute;
-      left: 3px;
-      right: 3px;
-      top: 3px;
-      bottom: 3px;
-      border-radius: 7px;
-      background-image: linear-gradient(135deg, transparent 5%, orange 5% 95%, transparent 95%);
-    }
-
-
+    border-width: .15em;
+    clip-path: polygon(
+                    0% 0%, /* top left */
+                    100% 0%, /* top right */
+                    100% 100%, /* bottom right */
+                    3em 100%, /* bottom left */
+                    0 calc(100% - 3em) /* bottom left */
+    );
   }
-
 
 }
 
