--- a/views/post-parts/periodical-table/interactive-periodical-table.html.twig
+++ b/views/post-parts/periodical-table/interactive-periodical-table.html.twig
@@ -26,8 +26,10 @@
         {% endif %}
         {% if row and col %}
             <div class="element" style="grid-column: {{ col }}; grid-row: {{ row }};">
-                {{ element.atomic_number }}<br>
-                <strong>{{ element.symbol }}</strong>
+                <div class="element-content">
+                    {{ element.atomic_number }}<br>
+                    <strong>{{ element.symbol }}</strong>
+                </div>
             </div>
         {% endif %}
     {% endfor %}
