--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -23,7 +23,7 @@
     .element-content {
       width: calc(100% - .5em);
       height: calc(100% - .5em);
-      margin: auto;
+      margin: .25em;
       background-color: lightblue;
       clip-path: polygon(
                       0% 0%, /* top left */
