--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -8,7 +8,7 @@
   max-height: 80vh;
   grid-template-columns: 1fr repeat(18, 2fr);
   grid-template-rows: 2fr repeat(7, 3fr) 1fr repeat(2, 3fr);
-  grid-gap: 0;
+  grid-gap: .1em;
   text-align: center;
 
   .element {
@@ -21,6 +21,10 @@
                     0 calc(100% - 1em) /* bottom left */
     );
     .element-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       width: calc(100% - .5em);
       height: calc(100% - .5em);
       margin: .25em;
@@ -32,6 +36,10 @@
                       1em 100%, /* bottom left */
                       0 calc(100% - 1em) /* bottom left */
       );
+
+      > * {
+        display: block;
+      }
     }
   }
 
