Some changes based on new requirements.

--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -28,6 +28,7 @@
       width: calc(100% - .5em);
       height: calc(100% - .5em);
       margin: .25em;
+      padding: .5em 1em 1em;
       background-color: lightblue;
       clip-path: polygon(
                       0% 0%, /* top left */
