--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -10,6 +10,10 @@
   grid-gap: .1em;
   text-align: center;
 
+  * {
+    box-sizing: border-box;
+  }
+
   .element {
     background-color: blue;
     clip-path: polygon(
@@ -28,7 +32,7 @@
       width: calc(100% - .5em);
       height: calc(100% - .5em);
       margin: .25em;
-      padding: .5em 1em 1em;
+      padding: .2em .5em .5em;
       background-color: lightblue;
       clip-path: polygon(
                       0% 0%, /* top left */
