Some changes based on new requirements.

--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -32,7 +32,7 @@
       width: calc(100% - .5em);
       height: calc(100% - .5em);
       margin: .25em;
-      padding: .05em .25em .25em;
+      padding: 0 .2em .2em;
       background-color: lightblue;
       clip-path: polygon(
                       0% 0%, /* top left */
