Some changes based on new requirements.

--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -45,7 +45,7 @@
       > * {
         display: block;
         width: 100%;
-        max-width: 4.5em;
+        max-width: 100%;
       }
 
       .atomic-number {
