Some changes based on new requirements.

--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -15,6 +15,7 @@
   }
 
   .element {
+    overflow: hidden;
     background-color: blue;
     clip-path: polygon(
                     0% 0%, /* top left */
