--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -18,8 +18,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid $up-gray;
-    background-color: rgba($up-gray, .3);
+    border: 2px solid rgba($up-gray, .8);
+    background-color: rgba($up-gray, .2);
     font-weight: bolder;
   }
 
