--- a/views/post-parts/periodical-table/interactive-periodical-table.html.twig
+++ b/views/post-parts/periodical-table/interactive-periodical-table.html.twig
@@ -40,7 +40,7 @@
     <div style="grid-column: 3 / 4; grid-row: 2 / 3;"></div>
     <div style="grid-column: 4 / 14; grid-row: 2 / 5;"></div>
     <div style="grid-column: 14 / 19; grid-row: 2 / 3;"></div>
-    <div style="grid-column: 1 / 20; grid-row: 9 / 10; background-color: lightgrey;"></div>
+    <div style="grid-column: 1 / 20; grid-row: 9 / 10;"></div>
     <div style="grid-column: 1 / 5; grid-row: 10 / 12;"></div>
 
 </div>
