Some changes based on new requirements.

--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -7,8 +7,12 @@
   max-width: 100%;
   grid-template-columns: 1fr repeat(18, 2fr);
   grid-template-rows: 1fr repeat(7, 3fr) 1fr repeat(2, 3fr);
-  grid-gap: .1em;
+  grid-gap: .15em;
   text-align: center;
+
+  @media (max-width: 800px) {
+    font-size: 0.7em;
+  }
 
   * {
     box-sizing: border-box;
