--- a/views/post-parts/periodical-table/interactive-periodical-table.html.twig
+++ b/views/post-parts/periodical-table/interactive-periodical-table.html.twig
@@ -2,7 +2,7 @@
 
     {% set columnIndexRows = [1, 2, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 2, 2, 2, 2, 2, 1] %}
     {% for columnIndex in 1..18 %}
-        <div class="index index-column" style="grid-row: {{ columnIndexRows[columnIndex] }}; grid-column: {{ columnIndex }};">
+        <div class="index index-column" style="grid-row: {{ columnIndexRows[columnIndex - 1] }}; grid-column: {{ columnIndex + 1 }};">
             {{ columnIndex }}
         </div>
     {% endfor %}
