Some changes based on new requirements.

--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -8,7 +8,7 @@ This page theme can be selected as custom theme of single "page" type post (due 
 {% set periodicalTable = site.theme.link ~ '/images/others/periodical-table.png' %}
 
 {% block article_content %}
-    <main class="container content-wrapper my-5">
+    <main class="container content-wrapper my-5 mx-0 px-0">
         {% block periodical_table %}
             <div class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
                 <div class="col-12">
