Some changes based on new requirements.

--- a/views/post-parts/periodical-table/interactive-periodical-table.html.twig
+++ b/views/post-parts/periodical-table/interactive-periodical-table.html.twig
@@ -40,6 +40,7 @@
                     <span class="atomic-weight d-none d-md-block">
                         {{ element.atomic_weight }}
                     </span>
+                    <span class="d-md-none"></span>
                 </div>
             </div>
         {% endif %}
