--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -14,8 +14,12 @@
     font-size: 1.1em;
   }
 
-  @media (max-width: 800px) {
-    font-size: 0.7em;
+  @media (max-width: 1100px) {
+    font-size: 0.85em;
+  }
+
+  @media (max-width: 900px) {
+    font-size: 0.75em;
   }
 
   * {
