--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -14,12 +14,24 @@
     font-size: 1.1em;
   }
 
-  @media (max-width: 1100px) {
+  @media (max-width: 1200px) {
+    font-size: 0.9em;
+  }
+
+  @media (max-width: 1000px) {
     font-size: 0.85em;
   }
 
   @media (max-width: 900px) {
+    font-size: 0.8em;
+  }
+
+  @media (max-width: 800px) {
     font-size: 0.75em;
+  }
+
+  @media (max-width: 700px) {
+    font-size: 0.7em;
   }
 
   * {
