--- a/views/single-customs/single-surovina-chemickeho-prumyslu.html.twig
+++ b/views/single-customs/single-surovina-chemickeho-prumyslu.html.twig
@@ -4,9 +4,12 @@
 {% endblock %}
 
 {% block article_content %}
-    <section class="row my-5">
-        <div class="col-12">
-            {{ post.content }}
-        </div>
-    </section>
+        <section class="row my-5">
+            <div class="col-12">
+                <h3>{{ post.title }}</h3>
+                <div style="text-align: justify;">
+                    {{ post.content }}
+                </div>
+            </div>
+        </section>
 {% endblock %}
