--- a/views/custom-templates/industry-materials.html.twig
+++ b/views/custom-templates/industry-materials.html.twig
@@ -7,11 +7,13 @@
         <section class="row my-5">
             {% set image_src = element.thumbnail.src|default(get_image(element.meta('_menu_image')).src|default) %}
             {% if image_src|default and image_src|length > 0 %}
-                <a href="{{ element.link }}" title="{{ element.title }}" class="mb-3">
-                    <img class="d-block w-100 mh-100 p-2 img-thumbnail"
-                         src="{{ image_src }}"
-                         alt="{{ element.thumbnail.alt|default }}">
-                </a>
+                <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center">
+                    <a href="{{ element.link }}" title="{{ element.title }}" class="mb-3">
+                        <img class="d-block w-100 mh-100 p-2 img-thumbnail"
+                             src="{{ image_src }}"
+                             alt="{{ element.thumbnail.alt|default }}">
+                    </a>
+                </div>
             {% endif %}
             <div class="col-12 col-md d-flex align-items-start flex-column py-1">
                 <a href="{{ element.link }}" class="text-dark text-decoration-none">
