--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -20,6 +20,12 @@ $rfs-base-value: 0.8rem;
   }
 }
 
+#main-content {
+  p, span {
+    text-align: justify;
+  }
+}
+
 .signpost-card {
   background-color: rgba(200, 200, 255, .25) !important;
 
